--- a/main.tex
+++ b/main.tex
@@ -175,7 +175,7 @@ the mono electronic operator:
 where
 $\Delta_i$ is the laplacian of the coordinates of electron $i$,
 $Z_C$ is the number of core electrons withdrawn from the reference system,
-$\hat{V}(i)$ the pseudo potential which reproduce the electrostatic
+$\hat{V}(i)$ the pseudo potential which reproduces the electrostatic
 interaction between the dormant and active electrons
 and $\hat{\sigma}(i)$ the operator, which models the exclusion principle
 and prevents active electrons from collapsing into the dormant region.
@@ -207,46 +207,49 @@ In \cite{drujon_pseudopotentials_2013}, we
 
 \subsection{Potentials \& Potential Geometry}
 
-In order to fulfil the criteria specified in [REF: INTRODUCTION HAMILTONIAN], we make use of two kinds of Gaussian pseudopotentials [REF], of \(s\) and \(p\) orbital shapes. The \(p\) pseudo-potential was added 
+As in Carissan and Drujon \cite{drujon_pseudopotentials_2013}, we take a CH\(_{3}\) as our starting system. In order to fulfil the criteria specified in [REF: INTRODUCTION HAMILTONIAN], we make use of two kinds of Gaussian pseudopotentials [REF], of \(s\) and \(p\) orbital shapes. The \(p\) pseudo-potential is added after we conclude that a system of only \(s\) potentials is unable to represent the real system with the desired accuracy. 
 
 [DIAGRAM DISPLAYING CH3 PSEUDO-MOLECULE WITH LABELS OF POTENTIALS AND DISTANCES]
 
 Figure [REF] displays the final pseudo-system. A hydrogen-like "pseudo-carbon", with a nuclear charge of \(Z_{nucleus} = 1\), and one electron occupying the \(p_{z}\) orbital, is surrounded by three potential sets at a planar distance of \(d\), each consisting of two \(s\)-shaped potentials with a distance above and below the \(xy\)-plane of \(s\). A further \(p\)-shaped potential is applied directly to the pseudo-carbon.
 
-This gives multiple variables we can use to manipulate the properties of the system. We can alter the strength and diffuseness of the \(p\) and \(s\) potentials themselves, as well as vary the distances \(d\) and \(s\) by moving the \(s\)-potentials.
+This gives multiple variables we can use to manipulate the properties of the system. We can alter the strength and diffuseness of the \(p\) and \(s\) potentials themselves, as well as vary the distances \(d\) and \(s\) by moving the \(s\)-potentials. In this article we fix \(s = 0.25\)
 
 \subsection{Making Potentials Physically Meaningful}
 
-So far the method used to obtain the potential parameters has been strictly empirical. However we can make a more informed guess at some starting parameters from which to optimise. Clearly the assumption that \(Z = 1\) is unrealistic. The Slater rules suggest that, with the screening effect, the \(p_{z}\) electron should experience a charge of \(Z \approx 2.4\). To mimic the effect of an electron-screened nucleus, we can use a \(p_{z}\) pseudopotential. In order to make an educated guess of the parameters of this new potential, we need to find an expression for \(Z(\langle r \rangle)\), \( \langle r \rangle \) being the expected distance of the electron from the nucleus, a value we can calculate for orbitals using data extracted from chemistry software.
-	The generic forms of Gaussian Type Orbitals for \(s\) and \(p_{z}\) are
+It is possible to obtain the potential parameters entirely by empirical means. However, we can make a more informed guess at some starting parameters from which to optimise. Clearly the assumption that \(Z = 1\) is unrealistic. The Slater rules suggest that, with the screening effect, the \(p_{z}\) electron of a carbon atom should experience a charge of \(Z \approx 2.4\). To mimic the effect of an electron-screened nucleus, we can use a \(p_{z}\) pseudopotential. In order to make an educated guess of the parameters of this new potential, we need to find an expression for \(Z(\langle r \rangle)\), \( \langle r \rangle \) being the expected distance of the electron from the nucleus.
+	The generic forms of Gaussian Type Orbitals for \(s\) and \(p_{z}\) are [REF]
 \begin{equation}
-GTO_{s} = re^{-\alpha r^{2}},\qquad	GTO_{pz} = r \cos \theta e^{-\alpha r^{2}}
+GTO_{s} = re^{-\alpha r^{2}},\qquad	GTO_{p_{z}} = r \cos \theta e^{-\alpha r^{2}}
 \end{equation}
-The analytical form of the \(p_{z}\) orbital for a hydrogen-like atom is
+The analytical form of the \(p_{z}\) orbital for a hydrogen-like atom is [REF]
 \begin{equation}
 \phi_{210} = \frac{1}{\sqrt{\pi}} \frac{Z_{eff}}{2a_{0}} ^{\frac{5}{2}} re^{-\frac{z_{eff}r}{2a_{0}}} \cos \theta
 \end{equation}
-and with the aid of WolframAlpha
+and from this we obtain 
 \begin{equation}
-\langle \phi_{210} | r | \phi_{210} \rangle = \frac{5a_{0}}{Z}
+\langle \phi_{210} | r | \phi_{210} \rangle = \frac{5a_{0}}{Z_{eff}}
 \end{equation}
-Next, we need to find a value for \( \langle r \rangle \), which we can extract from our Turbomole calculation
+Next, we need to find a value for \( \langle r \rangle \), which we can extract from our Turbomole calculation by calculating
+\begin{equation}
+\langle r \rangle = \lambda B \lambda^{T}
+\label{equation:exp_r}
+\end{equation}
+where \(\lambda\) are the Symmetrised Atomic Orbital Shells taken from the molecular orbital files, and B is the matrix of \(\langle GTO_{p_{z}} | r | GTO_{p_{z}} \rangle\) values, appropriately normalised and contracted according to the basis set used.
 
-[DERIVATION NEEDED]
-
-Now we have \( \langle r \rangle \approx 1.7\) and therefore we can see from (3) that \(Z_{eff} \approx 2.9\). However, the next complication is that this method assumes a complete overlap of the \(p_{z}\) orbital with the \(p_{z}\) pseudopotential which - given that the potential consists only of a single function as compared to the orbital's many - is unlikely to be the case. Therefore we define an overlap matrix \(S\) between \(MO\), the molecular orbital, and \(\chi\), taken from our pseudopotential definition
+From Equation \ref{equation:exp_r}, we have \( \langle r \rangle \approx 1.8\) and therefore we can see from (3) that \(Z_{eff} \approx 3.6\). However, the next complication is that this method assumes a complete overlap of the \(p_{z}\) orbital with the \(p_{z}\) pseudopotential which - given that the potential consists only of a single function as compared to the orbital's many - is unlikely to be the case. Therefore we define an overlap matrix \(S\)
 \begin{equation}
 S = \langle MO | \chi \rangle
 \end{equation}
-where
+between a molecular orbital MO, and \(\chi\), taken from our non-local pseudo-potential definition [REF]
 \begin{equation}
 \chi = e^{-\alpha r^{2}},\qquad pp = Z_{pseudo} | \chi \rangle \langle \chi |
 \end{equation}
-We therefore have
+leading us to
 \begin{equation}
 \langle \widehat{Z} \rangle = \langle MO | \widehat{Z} | MO \rangle = \langle MO | Z_{pseudo} | \chi \rangle \langle \chi | MO \rangle = Z_{pseudo} S^{2}
 \end{equation}
-Finally, knowing that our hydrogen-like pseudosystem already contains a charge, \(Z_{nucleus}\), of one we subtract this from the desired \(Z_{eff}\) we want to influence our \(p_{z}\) electron, leaving us with
+Finally, knowing that our hydrogen-like pseudo-system already contains a charge, \(Z_{nucleus}\), of one we subtract this from the desired \(Z_{eff}\) we want to influence our \(p_{z}\) electron, leaving us with
 \begin{equation}
 Z_{pseudo} = (Z_{eff} - Z_{nucleus})S^{-2}
 \end{equation}
@@ -301,24 +304,25 @@ DFT & -2.605 & 1.0 \\
 \label{table:ch3_s_potentials}
 \end{table}
 
-We aim first at reproducing the values for CH\(_{3}\) as given in Table \ref{table:ref_values_1}. The reference CH\(_{3}\) is created and optimised as described in section [REF]. The pseudo-system is then set up, erasing the hydrogen atoms, setting the carbon charge \(Z_{nucleus} = 1\) and applying \(s\) pseudo-potentials, as well as selecting the correct orbital for the remaining electron. Table \ref{table:ch3_s_potentials} displays some of our results, with the \(s\)-potentials optimised to generate the correct HOMO energy and \(d = 0.5\). Promisingly, we are able to produce many sets of potentials that give the correct energy with coefficients and exponents of the same order of magnitude as the basis set.
+We aim first at reproducing the values for the CH\(_{3}\) radical as given in Table \ref{table:ref_values_1}. This reference CH\(_{3}\) is created and has its geometry optimised under Hartree-Fock. The pseudo-system is then set up, erasing the hydrogen atoms, setting the carbon charge \(Z_{nucleus} = 1\) and applying \(s\) pseudo-potentials, as well as selecting the correct orbital for the remaining electron. Table \ref{table:ch3_s_potentials} displays some of our results, with the \(s\)-potentials optimised to generate the correct HOMO energy and \(d = 0.5\). Promisingly, we are able to produce many sets of potentials that give the correct energy with coefficients and exponents of the same order of magnitude as the basis set.
 
 Next, we take some of these potentials to create a pseudo-ethene system, with the results shown in Table \ref{table:ethene_s_pseudo}. All potentials tested with \(d = 2.0\) gave results several orders of magnitude away from the reference value. From Figure [LONG R PSEUDO ETHENE PICTURE] we may see the reason. One of the potential sets from each carbon is closer to the neighbouring carbon than the neighbour's own potential sets, thus . At the shorter range \(d = 0.5\), the HOMO energy is of the right magnitude, though with errors of \(~ 30\%\). Attempts to eliminate this error lead us to the use of the \(p_{z}\) potential. 
 
 \begin{table}[ht]
-\caption{HOMO-optimised Pseudo-ethene using only \(s\)-potentials}
-\begin{tabular}{c c c c}
+\caption{HOMO-optimised Pseudo-ethene using only \(s\)-potentials with an exponent of 10.0}
+
+\begin{tabular}{c c c}
 \hline\hline
-Calculation Type & \(s\) coefficient & \(s\) exponent & \( \pi \) orbital energy (eV) \\
+Calculation Type & \(s\) coefficient & \( \pi \) orbital energy (eV) \\
 \hline
-\multicolumn{4}{c}{d = 2.0} \\
+\multicolumn{3}{c}{d = 2.0} \\
 \hline
-HF & -7.521 & 10.0 & -9597.0 \\
+HF & -7.521 & -9597.0 \\
 \hline
-\multicolumn{4}{c}{d = 0.5} \\
+\multicolumn{3}{c}{d = 0.5} \\
 \hline
-HF & -7.521 & 10.0 & -7.905 \\
-DFT & -7.679 & 10.0 & -8.447 \\
+HF & -7.521 & -7.905 \\
+DFT & -7.679 & -8.447 \\
 \hline
 \end{tabular}
 \label{table:ethene_s_pseudo}
@@ -350,7 +354,7 @@ DFT & 3.483 & 1.0 \\
 
 [SHOULD I HAVE SOME RESULTS TO SHOW THE SAME IS TRUE OF USING JUST THE P POTENTIALS?]
 
-Having successfully created a pseudo-ethene with the correct HOMO, we attempt to have the pseudo-system replicate other properties of the real system. Reference values for the singlet-triplet \(\pi-\pi*\) excitation and first ionisation energies of ethene are given in Table \ref{table:ref_ethene_exitation_energies}. Testing the relevant energies for the pseudo-systems, the early results are not promising, as we can see from Table \ref{table:early_ethene_excitations}. However, after we abandon the notion of sticking strictly to a \(p_{z}\)-potential exponent that gives the maximum overlap with the real orbital, we discover there is a "sweet spot" of potential coefficients and exponents around which the correct values begin to emerge. We speculate in section \ref{section:po_overlap} as to the reason for this. Table \ref{table:ref_ethene_excitation_energies} shows our optimal result, chosen to give HOMO, excitation and ionisation energies closest to the reference values. 
+Having successfully created a pseudo-ethene with the correct HOMO, we attempt to have the pseudo-system replicate other properties of the real system. Reference values for the singlet-triplet \(\pi-\pi*\) excitation and first ionisation energies of ethene are given in Table \ref{table:ref_ethene_excitation_energies}. Testing the relevant energies for the pseudo-systems, the early results are not promising, as we can see from Table \ref{table:early_ethene_excitations}. However, after we abandon the notion of sticking strictly to a \(p_{z}\)-potential exponent that gives the maximum overlap with the real orbital, we discover there is a "sweet spot" of potential coefficients and exponents around which the correct values begin to emerge. We speculate in section \ref{section:po_overlap} as to the reason for this. Table \ref{table:ref_ethene_excitation_energies} shows our optimal result, chosen to give HOMO, excitation and ionisation energies closest to the reference values. 
 
 \begin{table}[ht]
 \caption{Pseudo-ethene results}
@@ -416,7 +420,7 @@ Singlet HOMO & & -10.062 \\
 
 Taking these new potentials we test them against a series of chain alkenes up to length C\(_{12}\), using a variety of methods. In each case, the geometry of the reference system is optimised according to the method used (HF, DFT with TPSS, etc), before taking the the reference geometry and applying the pseudo-potentials from Table \ref{table:ref_ethene_excitation_energies}, optimised for ethene under HF. Figures \ref{fig:alkenes_hf_dft} and \ref{fig:alkenes_tddft} show the results. Table \ref{table:alkene_errors} gives a breakdown of the percentage errors for each method across all molecules tested. The pattern of increasing HOMO energy and decreasing ionisation and excitation energies seen in the reference systems seems to be well replicated by the pseudo-alkenes, with the energies following the same gradient. [COMMENT on ERRORS]
 
-Also compared are TD-DFT results for this system and that in [REF], which match to within 3\%. It seems the results in [REF] have been accurately replicated.
+Also compared are TD-DFT results for this system and that in Carissan and Drujon \cite{drujon_pseudopotentials_2013}, which match to within 3\%. It seems the previous results have been accurately replicated.
 
 \begin{figure}[ht]
 \includegraphics[width=8cm]{hf_homo}
