--- a/main.tex
+++ b/main.tex
@@ -253,6 +253,7 @@ The analytical form of the \(p_{z}\) orbital for a hydrogen-like atom is [REF]
 \end{equation}
 and from this we obtain 
 \begin{equation}
+\label{equation:PsirPsi}
 \langle \phi_{210} | r | \phi_{210} \rangle = \frac{5a_{0}}{Z_{eff}}
 \end{equation}
 Next, we need to find a value for \( \langle r \rangle \), which we can extract from our Turbomole calculation by calculating
@@ -262,7 +263,7 @@ Next, we need to find a value for \( \langle r \rangle \), which we can extract 
 \end{equation}
 where \(\lambda\) are the Symmetrised Atomic Orbital Shells taken from the molecular orbital files, and B is the matrix of \(\langle GTO_{p_{z}} | r | GTO_{p_{z}} \rangle\) values, appropriately normalised and contracted according to the basis set used.
 
-From Equation \ref{equation:exp_r}, we have \( \langle r \rangle \approx 1.8\) and therefore we can see from (3) that \(Z_{eff} \approx 3.6\). However, the next complication is that this method assumes a complete overlap of the \(p_{z}\) orbital with the \(p_{z}\) pseudopotential which - given that the potential consists only of a single function as compared to the orbital's many - is unlikely to be the case. Therefore we define an overlap matrix \(S\)
+From Equation \ref{equation:exp_r}, we have \( \langle r \rangle \approx 1.8\) and therefore we can see from (\ref{equation:PsirPsi}) that \(Z_{eff} \approx 3.6\). However, the next complication is that this method assumes a complete overlap of the \(p_{z}\) orbital with the \(p_{z}\) pseudopotential which - given that the potential consists only of a single function as compared to the orbital's many - is unlikely to be the case. Therefore we define an overlap matrix \(S\)
 \begin{equation}
 S = \langle MO | \chi \rangle
 \end{equation}
