Addition of units

--- a/main.tex
+++ b/main.tex
@@ -286,7 +286,7 @@ Next, we need to find a value for \( \langle r \rangle \), which we can extract 
 \end{equation}
 where \(\lambda\) are the Symmetrised Atomic Orbital Shells taken from the molecular orbital files, and B is the matrix of \(\langle \psi_{p_{z}} | r | \psi_{p_{z}} \rangle\) values, appropriately normalised and contracted according to the basis set used.
 
-From Equation \ref{equation:exp_r}, we have \( \langle r \rangle \approx 1.8\) and therefore we can see from Equation \ref{equation:PsirPsi} that \(Z_{eff} \approx 3.6\). However, the next complication is that this method assumes a complete overlap of the \(p_{z}\) orbital with the \(p_{z}\) pseudopotential which - given that the potential consists only of a single function as compared to the orbital's many - is unlikely to be the case. Therefore we define an overlap matrix \(S\)
+From Equation \ref{equation:exp_r}, we have \( \langle r \rangle \approx 1.8\;a.u.\) and therefore we can see from Equation \ref{equation:PsirPsi} that \(Z_{eff} \approx 3.6\). However, the next complication is that this method assumes a complete overlap of the \(p_{z}\) orbital with the \(p_{z}\) pseudopotential which - given that the potential consists only of a single function as compared to the orbital's many - is unlikely to be the case. Therefore we define an overlap matrix \(S\)
 \begin{equation}
 S = \langle \phi_{p_{z}} | \chi \rangle
 \end{equation}
